# homework_7.1

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  payments_fixture.json  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_description_alter_lesson_link_to_video.py  0003_course_preview_lesson_preview.py  0004_course_owner_lesson_owner.py  0005_alter_course_description_alter_lesson_link_to_video_and_more.py  0006_alter_lesson_description.py  0007_course_updated_at.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_user.py  0004_payment_stripe_payment_url_payment_stripe_session_id_and_more.py  0005_alter_payment_stripe_payment_url.py
